# Bookie

./: .gitignore  README.md  SETUP.md  install.sh  pyproject.toml  setup-plan.json
config/: plaid-credentials.template.json  plaid-items.template.json  qbo-credentials.template.json
employee-workspace/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  STYLE.md  TOOLS.md  USER.md
employee-workspace/skills/categorize-transaction/: SKILL.md
employee-workspace/skills/detect-anomaly/: SKILL.md
employee-workspace/skills/generate-1099-packet/: SKILL.md
employee-workspace/skills/month-end-close/: SKILL.md
employee-workspace/skills/reconcile-bank-feed/: SKILL.md
lessons/: Bookie-design-research-synthesis.md  CTO-postmortem-for-Bookie.md  browser-automation-escalation-ladder.md
prd/: Bookie-PRD.md  requirements.md
research/: 01-quickbooks-api.md  02-competitive-landscape.md  03-bookkeeping-workflow-domain.md  04-architecture-patterns.md  05-compliance-security.md  README.md
scripts/: capture-browser-session.sh  plaid-link.sh  qbo-authorize.sh
scripts/intuit-automation/: .gitignore  login-and-capture.js  qbo-enter.js  seqflow.js  stepup.js
src/bookie/: __init__.py  anomaly.py  browser.py  categorizer.py  cleanup.py  cli.py  close.py  coa.py  models.py  plaid_feed.py  qbo.py  reconciler.py  reports.py  tax.py
tests/: test_anomaly.py  test_browser.py  test_categorizer.py  test_cleanup.py  test_coa.py  test_qbo.py  test_reconciler.py  test_reports.py  test_tax.py
