[project]
name = "bookie"
version = "0.1.0"
description = "Autonomous AI bookkeeper. Runs as an AI employee inside OpenHarness."
authors = [{name = "Claude Code (Chief of Staff for John Husband)"}]
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}

[project.optional-dependencies]
# Live integrations; not required for v1 self-check / unit tests
qbo = ["python-quickbooks>=0.9", "intuit-oauth>=1.2"]
plaid = ["plaid-python>=20.0"]
test = ["pytest>=7"]

[project.scripts]
bookie = "bookie.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
